--- a/css/pirateborg.css
+++ b/css/pirateborg.css
@@ -4,20 +4,20 @@
   /* try to deprecated */
   --background-color: #000;
   --foreground-color: #000;
-  --foreground-alt-color: #FFF;
+  --foreground-alt-color: #fff;
   --highlight-background-color: #d20608;
-  --highlight-foreground-color: #FFFFFF;
+  --highlight-foreground-color: #ffffff;
   --window-background: url(/systems/pirateborg/ui/parchment-2.jpg) repeat;
-  --window-header-color: #FFFFFF;
+  --window-header-color: #ffffff;
   --window-header-background-color: #000000;
   --sidebar-tab-background: #000000;
-  --sidebar-tab-color: #FFFFFF;
+  --sidebar-tab-color: #ffffff;
   --light-border-color: #f6dec2;
   --dark-border-color: #a29280;
   --sidebar-background: var(--window-background);
   --sidebar-color: #000000;
   --button-background: #000000;
-  --button-color: #FFFFFF;
+  --button-color: #ffffff;
   --icon-backgroud-color: #000000;
   --h1-font: "Roman Antique Regular";
   --h2-font: "IM Fell English SC";
@@ -25,7 +25,7 @@
   --chat-font: "Alegreya";
   --chat-info-font: "Alegreya";
   --item-font: "Alegreya";
-  --button-font: "Alegreya"
+  --button-font: "Alegreya";
   /* foundry core */
   --color-text-light-6: var(--foreground-color);
   --color-text-light-5: var(--foreground-color);
@@ -221,8 +221,8 @@
 .pirateborg.sheet .sheet-tabs .item {
   font-family: var(--h2-font);
   font-size: 22px;
-  height: 34px;
-  line-height: 34px;
+  height: 36px;
+  line-height: 38px;
   width: 100%;
   white-space: nowrap;
   padding-left: 16px;
