--- a/scss/pirateborg/_root.scss
+++ b/scss/pirateborg/_root.scss
@@ -5,19 +5,18 @@
   /* try to deprecated */
   --background-color: #000;
 
-
   --foreground-color: #000;
-  --foreground-alt-color: #FFF;
+  --foreground-alt-color: #fff;
 
   --highlight-background-color: #d20608;
-  --highlight-foreground-color: #FFFFFF;
- 
+  --highlight-foreground-color: #ffffff;
+
   --window-background: url(/systems/pirateborg/ui/parchment-2.jpg) repeat;
-  --window-header-color: #FFFFFF;
+  --window-header-color: #ffffff;
   --window-header-background-color: #000000;
 
   --sidebar-tab-background: #000000;
-  --sidebar-tab-color: #FFFFFF;
+  --sidebar-tab-color: #ffffff;
 
   --light-border-color: #f6dec2;
   --dark-border-color: #a29280;
@@ -26,19 +25,19 @@
   --sidebar-color: #000000;
 
   --button-background: #000000;
-  --button-color: #FFFFFF;
+  --button-color: #ffffff;
 
   --icon-backgroud-color: #000000;
 
   --h1-font: "Roman Antique Regular";
   --h2-font: "IM Fell English SC";
   --h3-font: "IM Fell English SC";
- 
-  --chat-font: "Alegreya"; 
+
+  --chat-font: "Alegreya";
   --chat-info-font: "Alegreya";
   --item-font: "Alegreya";
 
-  --button-font: "Alegreya"
+  --button-font: "Alegreya";
 
   /* foundry core */
   --color-text-light-6: var(--foreground-color);
