--- a/templates/actor/character-sheet.html
+++ b/templates/actor/character-sheet.html
@@ -199,7 +199,7 @@
               </button>
             </div>
           </li>
-          </ol>
+        </ol>
       </ol>
 
       {{!-- Weapons --}}
@@ -398,17 +398,15 @@
       <div class="underarmor-row">
         <div class="incoming-attack">
           <div>
-            <button
-              type="button"
-              class="item-button rollable defend-button button"
-              title="{{localize 'PB.Defend'}}"
-            >
+            <button type="button" class="item-button rollable defend-button button" title="{{localize 'PB.Defend'}}">
               {{localize "PB.Defend"}}
             </button>
           </div>
         </div>
       </div>
+      
     </div>
+  </div>    
 
     {{!-- Features Tab --}}
     <div class="tab specials-tab" data-group="primary" data-tab="features">     
