--- a/templates/chat/attack-roll-card.html
+++ b/templates/chat/attack-roll-card.html
@@ -26,8 +26,7 @@
   <div class="outcome-text">
     <span class="take-damage">{{takeDamage}}</span>
   </div>
-  {{/if}}
-  {{#if damageRoll}}
+  {{/if}} {{#if damageRoll}}
   <div class="damage-roll">
     <div class="roll-title">
       <span>{{localize 'PB.Damage'}}: {{damageRoll._formula}}</span>
