--- a/templates/chat/generic-chat-message-card.html
+++ b/templates/chat/generic-chat-message-card.html
@@ -9,16 +9,14 @@
     <div class="attack-roll">
       {{#if rollTitle}}
       <div class="roll-title">
-        <span>{{rollTitle}}</span
-        >
+        <span>{{rollTitle}}</span>
       </div>
-      {{/if}}
-      {{#if roll}}
+      {{/if}} {{#if roll}}
       <div class="roll-result">
         <span>{{xtotal roll}}</span>
       </div>
-      {{/if}}    
+      {{/if}}
     </div>
   </div>
-  {{/if}}      
+  {{/if}}
 </form>
